--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 	
-		<!-- Hotjar Tracking Code for https://sergio11rm.github.io/IPO-SHOP/indexhtml -->
+		<!-- Hotjar Tracking Code for https://sergio11rm.github.io/IPO-SHOP/ -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -35,7 +35,6 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
-
 </head>
 
 <body>
