--- a/somos.html
+++ b/somos.html
@@ -27,7 +27,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 		
-		<!-- Hotjar Tracking Code for https://sergio11rm.github.io/IPO-SHOP/indexhtml -->
+		<!-- Hotjar Tracking Code for https://sergio11rm.github.io/IPO-SHOP/ -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
